--- a/build.xml
+++ b/build.xml
@@ -7,44 +7,57 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="bibigrid-java" default="fulljar" basedir=".">
+<project name="bibigrid" default="fulljar" basedir="." xmlns:ivy="antlib:org.apache.ivy.ant">
     <description>Builds, tests, and runs the project bibigrid-java.</description>
     <import file="nbproject/build-impl.xml"/>
     
     <tstamp>
-      <format property="build-date" pattern="yyyy-MM-dd HH:mm:ss" />
-	  </tstamp>
+        <format property="build-date" pattern="yyyy-MM-dd HH:mm:ss" />
+    </tstamp>
     <property name="version" value="1.0"/>
     
     <property name="full.jar" value="dist/bibigrid-java-full.jar"/>
-    <target name="fulljar" depends="jar,-post-jar">
-      <jar destfile="${full.jar}">
-          <manifest>
-              <attribute name="Main-Class" value="de.unibi.cebitec.bibigrid.StartUpOgeCluster"/>
-              <attribute name="BibiGrid-build-date" value="${build-date}" />
-              <attribute name="Bibigrid-version" value="${version}" />
-          </manifest>
-        <zipfileset excludes="META-INF/*" src="dist/bibigrid.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/aws-java-sdk-1.3.26.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/commons-codec-1.3.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/commons-logging-1.1.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/httpclient-4.1.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/httpcore-4.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/jackson-core-asl-1.8.7.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/jackson-mapper-asl-1.8.7.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/stax-1.2.0.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/stax-api-1.0.1.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/logback-classic-1.0.7.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/logback-core-1.0.7.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/slf4j-api-1.7.2.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/commons-cli-1.2.jar"/>
-        <zipfileset excludes="META-INF/*" src="lib/jsch-0.1.49.jar"/>
-      </jar>
-      <copy file="bibigrid.sh" tofile="dist/bibigrid"/>
-      <chmod file="dist/bibigrid" perm="+x"/>
-      <delete file="dist/bibigrid-java.jar"/>
-      <delete dir="dist/lib"/>
-      <delete file="dist/README.TXT"/>
+    
+    <ivy:settings url="http://bibiserv.techfak.uni-bielefeld.de/ivy-rep/ivysettings.xml"/>
+
+    <target name="resolve" description="retrieve dependencies with ivy">
+        <ivy:retrieve />
+    </target>
+
+    <target name="clean-cache" description="clean ivy cache">
+        <ivy:cleancache/>
+    </target>
+
+
+    <target name="fulljar" depends="resolve,jar,-post-jar">
+        <jar destfile="${full.jar}">
+            <manifest>
+                <attribute name="Main-Class" value="de.unibi.cebitec.bibigrid.StartUpOgeCluster"/>
+                <attribute name="BibiGrid-build-date" value="${build-date}" />
+                <attribute name="Bibigrid-version" value="${version}" />
+            </manifest>
+            <zipfileset excludes="META-INF/*"   src="dist/bibigrid.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/aws-java-sdk-1.4.5.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/commons-codec-1.4.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/commons-logging-1.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/httpclient-4.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/httpcore-4.1.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jackson-core-asl-1.8.7.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jackson-mapper-asl-1.8.7.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/stax-1.2.0.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/stax-api-1.0.1.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/logback-classic-1.0.11.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/logback-core-1.0.11.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/slf4j-api-1.7.5.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/commons-cli-1.2.jar"/>
+            <zipfileset excludes="META-INF/*" src="lib/jsch-0.1.50.jar"/>
+        </jar>
+        <copy file="bibigrid.sh" tofile="dist/bibigrid"/>
+        <chmod file="dist/bibigrid" perm="+x"/>
+        <delete file="dist/bibigrid-java.jar"/>
+        <delete dir="dist/lib"/>
+        <delete file="dist/README.TXT"/>
+        
     </target>
 
 
