--- a/ivy.xml
+++ b/ivy.xml
@@ -9,6 +9,7 @@
         <dependency org="ch.qos" name="logback" rev="1.0.11" />
         <dependency org="com.amazon.aws" name="aws-java-sdk" rev="1.4.5" />
         <dependency org="org.apache" name="commons-cli" rev="1.2" />
+        <dependency org="org.apache" name="commons-io" rev="2.4" />
         <dependency org="com.jcraft" name="jsch" rev="0.1.50" />
     </dependencies>
 </ivy-module>
