--- a/skel.bibigrid.properties
+++ b/skel.bibigrid.properties
@@ -14,3 +14,5 @@ ports=80,443,8080,8443
 #master-mounts=snap-d13bf6f9=/mnt/biotools/,snap-68d81540=/mnt/biodb/
 nfs-shares=/vol/biotools/,/vol/biodb/
 #slave-mounts=snap-d13bf6f9=/mnt/biotools/,snap-68d81540=/mnt/biodb/
+#early-execute-script=/home/user/test.sh
+#execute-script=/home/user/test2.sh
