--- a/skel.bibigrid.properties
+++ b/skel.bibigrid.properties
@@ -3,16 +3,18 @@ secretKey=
 #aws-credentials-file=
 identity-file=
 keypair=
-endpoint=ec2.eu-west-1.amazonaws.com
+region=eu-west-1
 availability-zone=eu-west-1c
 master-instance-type=t1.micro
 master-image=ami-821018f6
 slave-instance-type=t1.micro
-slave-instance-count=2
+slave-instance-min=1
+slave-instance-max=5
 slave-image=ami-100c0364
 ports=80,443,8080,8443
 #master-mounts=snap-d13bf6f9=/mnt/biotools/,snap-68d81540=/mnt/biodb/
 nfs-shares=/vol/biotools/,/vol/biodb/
 #slave-mounts=snap-d13bf6f9=/mnt/biotools/,snap-68d81540=/mnt/biodb/
-#early-execute-script=/home/user/test.sh
-#execute-script=/home/user/test2.sh
+slave-instance-start=3
+use-master-as-compute=yes
+autoscaling=yes
