--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ excludes=
 file.reference.aws-java-sdk-1.4.5.jar=lib/aws-java-sdk-1.4.5.jar
 file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
 file.reference.commons-codec-1.4.jar=lib/commons-codec-1.4.jar
+file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.httpclient-4.1.1.jar=lib/httpclient-4.1.1.jar
 file.reference.jackson-core-asl-1.8.7.jar=lib/jackson-core-asl-1.8.7.jar
@@ -57,7 +58,8 @@ javac.classpath=\
     ${file.reference.logback-core-1.0.11.jar}:\
     ${file.reference.commons-cli-1.2.jar}:\
     ${file.reference.aws-java-sdk-1.4.5.jar}:\
-    ${file.reference.slf4j-api-1.7.5.jar}
+    ${file.reference.slf4j-api-1.7.5.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
