- Error Messages more clear. - bibigrid skeleton changed

--- a/skel.bibigrid.properties
+++ b/skel.bibigrid.properties
@@ -6,15 +6,15 @@ keypair=
 region=eu-west-1
 availability-zone=eu-west-1c
 master-instance-type=t1.micro
-master-image=ami-821018f6
+master-image=
 slave-instance-type=t1.micro
 slave-instance-min=1
 slave-instance-max=5
-slave-image=ami-100c0364
+slave-image=
 ports=80,443,8080,8443
-#master-mounts=snap-d13bf6f9=/mnt/biotools/,snap-68d81540=/mnt/biodb/
+master-mounts=
 nfs-shares=/vol/biotools/,/vol/biodb/
-#slave-mounts=snap-d13bf6f9=/mnt/biotools/,snap-68d81540=/mnt/biodb/
+slave-mounts=
 slave-instance-start=3
 use-master-as-compute=yes
 autoscaling=yes
