--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ endorsed.classpath=
 excludes=
 file.reference.aspectjrt-1.6.12.jar=lib/aspectjrt-1.6.12.jar
 file.reference.aspectjweaver-1.6.12.jar=lib/aspectjweaver-1.6.12.jar
-file.reference.aws-java-sdk-1.9.27.jar=lib/aws-java-sdk-1.9.27.jar
+file.reference.aws-java-sdk-1.10.7.jar=lib/aws-java-sdk-1.10.7.jar
 file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
 file.reference.commons-codec-1.6.jar=lib/commons-codec-1.6.jar
 file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
@@ -37,17 +37,20 @@ file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
 file.reference.freemarker-2.3.18.jar=lib/freemarker-2.3.18.jar
 file.reference.httpclient-4.3.jar=lib/httpclient-4.3.jar
 file.reference.httpcore-4.3.jar=lib/httpcore-4.3.jar
-file.reference.jackson-annotations-2.3.2.jar=lib/jackson-annotations-2.3.2.jar
-file.reference.jackson-core-2.3.2.jar=lib/jackson-core-2.3.2.jar
-file.reference.jackson-databind-2.3.2.jar=lib/jackson-databind-2.3.2.jar
-file.reference.joda-time-2.2.jar=lib/joda-time-2.2.jar
-file.reference.jsch-0.1.50.jar=lib/jsch-0.1.50.jar
+file.reference.jackson-annotations-2.5.3.jar=lib/jackson-annotations-2.5.3.jar
+file.reference.jackson-core-2.5.3.jar=lib/jackson-core-2.5.3.jar
+file.reference.jackson-databind-2.5.3.jar=lib/jackson-databind-2.5.3.jar
+file.reference.joda-time-2.8.1.jar=lib/joda-time-2.8.1.jar
+file.reference.jsch-0.1.53.jar=lib/jsch-0.1.53.jar
 file.reference.log4j-1.2.16.jar=lib/log4j-1.2.16.jar
 file.reference.logback-classic-1.0.11.jar=lib/logback-classic-1.0.11.jar
 file.reference.logback-core-1.0.11.jar=lib/logback-core-1.0.11.jar
 file.reference.mail-1.4.6.jar=lib/mail-1.4.6.jar
 file.reference.slf4j-api-1.7.5.jar=lib/slf4j-api-1.7.5.jar
 file.reference.slf4j-log4j12-1.7.5.jar=lib/slf4j-log4j12-1.7.5.jar
+file.reference.spring-beans-3.0.7.jar=lib/spring-beans-3.0.7.jar
+file.reference.spring-context-3.0.7.jar=lib/spring-context-3.0.7.jar
+file.reference.spring-core-3.0.7.jar=lib/spring-core-3.0.7.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -55,25 +58,28 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.aspectjrt-1.6.12.jar}:\
     ${file.reference.aspectjweaver-1.6.12.jar}:\
+    ${file.reference.aws-java-sdk-1.10.7.jar}:\
     ${file.reference.commons-cli-1.2.jar}:\
     ${file.reference.commons-codec-1.6.jar}:\
-    ${file.reference.aws-java-sdk-1.9.27.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.commons-logging-1.1.3.jar}:\
     ${file.reference.freemarker-2.3.18.jar}:\
     ${file.reference.httpclient-4.3.jar}:\
     ${file.reference.httpcore-4.3.jar}:\
-    ${file.reference.jackson-annotations-2.3.2.jar}:\
-    ${file.reference.jackson-core-2.3.2.jar}:\
-    ${file.reference.jackson-databind-2.3.2.jar}:\
-    ${file.reference.joda-time-2.2.jar}:\
-    ${file.reference.jsch-0.1.50.jar}:\
+    ${file.reference.jackson-annotations-2.5.3.jar}:\
+    ${file.reference.jackson-core-2.5.3.jar}:\
+    ${file.reference.jackson-databind-2.5.3.jar}:\
+    ${file.reference.joda-time-2.8.1.jar}:\
+    ${file.reference.jsch-0.1.53.jar}:\
     ${file.reference.log4j-1.2.16.jar}:\
     ${file.reference.logback-classic-1.0.11.jar}:\
     ${file.reference.logback-core-1.0.11.jar}:\
     ${file.reference.mail-1.4.6.jar}:\
     ${file.reference.slf4j-api-1.7.5.jar}:\
-    ${file.reference.slf4j-log4j12-1.7.5.jar}
+    ${file.reference.slf4j-log4j12-1.7.5.jar}:\
+    ${file.reference.spring-beans-3.0.7.jar}:\
+    ${file.reference.spring-context-3.0.7.jar}:\
+    ${file.reference.spring-core-3.0.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
