--- a/ivy.xml
+++ b/ivy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ivy-module version="2.0">
-    <info organisation="bibi" module="grid" revision="1.0"/>
+    <info organisation="de.unibi.bibiserv" module="bibigrid" revision="1.3"/>
     <configurations>
         <conf name="compile"/>
     </configurations>
