--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -201,7 +201,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=de.unibi.cebitec.bibigrid.StartUpOgeCluster
+main.class=de.unibi.cebitec.bibigrid.StartUp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
