before go home commit, parts are untestet ... - reintegrated spot instance support

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.aopalliance-1.0-1.9.1.jar=lib/aopalliance-1.0-1.9.1.jar
 file.reference.aspectjrt-1.6.12.jar=lib/aspectjrt-1.6.12.jar
 file.reference.aspectjweaver-1.6.12.jar=lib/aspectjweaver-1.6.12.jar
 file.reference.aws-java-sdk-1.10.16.jar=lib/aws-java-sdk-1.10.16.jar
+file.reference.aws-java-sdk-1.10.49.jar=lib/aws-java-sdk-1.10.49.jar
 file.reference.bcpkix-jdk15on-1.49-1.9.1.jar=lib/bcpkix-jdk15on-1.49-1.9.1.jar
 file.reference.bcprov-ext-jdk15on-1.49-1.9.1.jar=lib/bcprov-ext-jdk15on-1.49-1.9.1.jar
 file.reference.commons-cli-1.2.jar=lib/commons-cli-1.2.jar
@@ -168,7 +169,8 @@ javac.classpath=\
     ${file.reference.spring-beans-3.0.7.jar}:\
     ${file.reference.spring-context-3.0.7.jar}:\
     ${file.reference.spring-core-3.0.7.jar}:\
-    ${file.reference.sshj-0.8.1-1.9.1.jar}
+    ${file.reference.sshj-0.8.1-1.9.1.jar}:\
+    ${file.reference.aws-java-sdk-1.10.49.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
