1st release that starts a cluster on CeBiTec OpenStack

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-#Fri, 04 Mar 2016 13:35:34 +0100
+#Mon, 04 Apr 2016 16:20:42 +0200
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
@@ -36,6 +36,7 @@ javac.classpath=lib/aopalliance-1.0-1.9.1.jar\:lib/aspectjrt-1.6.12.jar\:lib/asp
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=${javac.classpath}
 javac.source=1.8
 javac.target=1.8
