--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
             <version>1.10.67</version>
         </dependency>       
             
-        <!-- Openstack Support -->    
+        <!-- Openstack Support -->    <!--
         <dependency>
             <groupId>org.apache.jclouds.api</groupId>
             <artifactId>openstack-nova</artifactId>
@@ -56,6 +56,11 @@
             <groupId>org.apache.jclouds.labs</groupId>
             <artifactId>openstack-neutron</artifactId>
             <version>1.9.2</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.pacesys</groupId>
+            <artifactId>openstack4j</artifactId>
+            <version>3.0.0</version>
         </dependency>
 
 
