--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,21 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- General -->
+        <dependency>
+            <groupId>com.github.BiBiServ.bibiserv</groupId>
+            <artifactId>bibiservabstraction</artifactId>
+            <version>2.1.0.alpha.1</version>
+        </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
