--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>de.unibi.cebitec.bibiserv</groupId>
-    <artifactId>BiBiGrid</artifactId>
+    <artifactId>BiBiGrid-core</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
     <properties>
@@ -17,6 +16,12 @@
             <url>https://jitpack.io</url>
         </repository>
     </repositories>
+
+    <parent>
+        <groupId>de.unibi.cebitec.bibiserv</groupId>
+        <artifactId>BiBiGrid</artifactId>
+        <version>1.0</version>
+    </parent>
 
     <dependencies>
         <!-- General -->
@@ -115,8 +120,7 @@
             </exclusions>
         </dependency>
     </dependencies>
-    
-    
+
     <build>
         <plugins>
             <plugin>
@@ -180,5 +184,8 @@
             </plugin>
         </plugins>
     </build>
-    
+
+
+
+
 </project>
