--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,29 @@
     
     <build>
         <plugins>
+            <!-- Ant jobs for copying playbook folder to target -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <id>copy playbook folder to target</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <tasks>
+                                <copy todir="target/playbooks">
+                                    <fileset dir="playbooks/"/>
+                                </copy>
+                            </tasks>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -167,12 +190,7 @@
                 </executions>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <directory>src/main/resources/playbooks</directory>
-                <targetPath>../playbooks</targetPath>
-            </resource>
-        </resources>
+
     </build>
     
 </project>
