--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <version>1.0.13</version>
         </dependency>
 
+        <!-- Google Cloud Support -->
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud</artifactId>
+            <version>0.13.0-alpha</version>
+        </dependency>
+
         <!-- AWS Support -->
         <dependency>
             <groupId>com.amazonaws</groupId>
