adjust properties template

--- a/template/.bibigrid.properties
+++ b/template/.bibigrid.properties
@@ -4,8 +4,8 @@ mode=openstack
 #Access
 identity-file=
 keypair=
-region=
-availability-zone=
+region=RegionOne
+availability-zone=nova
 
 #Network
 subnet=
