--- a/bibigrid-azure/pom.xml
+++ b/bibigrid-azure/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>BiBiGrid-Openstack</artifactId>
+    <artifactId>BiBiGrid-Azure</artifactId>
 
     <dependencies>
         <dependency>
@@ -18,16 +18,15 @@
             <version>1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.pacesys</groupId>
-            <artifactId>openstack4j</artifactId>
-            <version>3.1.0</version>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>azure</artifactId>
+            <version>1.5.0</version>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>22.0</version>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>azure-mgmt-compute</artifactId>
+            <version>1.5.0</version>
         </dependency>
-
 
         <dependency>
             <groupId>junit</groupId>
@@ -36,5 +35,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
