--- a/bibigrid-main/pom.xml
+++ b/bibigrid-main/pom.xml
@@ -39,6 +39,11 @@
             <version>1.1</version>
         </dependency>
         <dependency>
+            <groupId>de.unibi.cebitec.bibiserv</groupId>
+            <artifactId>BiBiGrid-Azure</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.3.1</version>
