--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/020-gridengine.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/020-gridengine.yml
@@ -9,19 +9,26 @@
     - gridengine-exec # Distributed resource management - Execution Server
 
 - name: Update act_qmaster
-  copy:
-    content: "{{ master.hostname }}"
-    dest: /var/lib/gridengine/default/common/act_qmaster
+  shell: "echo $(nslookup {{ master.ip }} | grep name | cut -f 2 -d '=' | cut -f 1 -d '.') > /var/lib/gridengine/default/common/act_qmaster"
+
+- name: Update permissions
+  file:
+    path: /var/lib/gridengine/default/common/act_qmaster
     owner: sgeadmin
     group: sgeadmin
     mode: 0644
-  register: act_qmaster
 
-# Make sure that master daemon is running
-- name: Start gridengine exec daemon
+- name: (Re-)start gridengine exec daemon
   systemd:
     name: gridengine-exec
-    state: started
+    state: restarted
+
+
+
+
+
+
+
 
 
 
