--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/020-gridengine.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/020-gridengine.yml
@@ -22,7 +22,7 @@
 
 - name: update act_qmaster
   copy:
-    content: "{{ master.hostname }}"
+    content: "{{ ansible_hostname }}"
     dest: /var/lib/gridengine/default/common/act_qmaster
     owner: sgeadmin
     group: sgeadmin
@@ -184,7 +184,7 @@
 # submit host
 
 - name : add master as submit host
-  shell: 'qconf -as {{ master.hostname }} && touch /etc/bibigrid/gridengine/submit_host.added'
+  shell: 'qconf -as {{ ansible_hostname }} && touch /etc/bibigrid/gridengine/submit_host.added'
   environment:
     SGE_ROOT: /var/lib/gridengine
   args:
@@ -208,7 +208,7 @@
       state: started
 
   - name: Add master as exec host
-    shell: '/etc/bibigrid/gridengine/add_exec.sh {{ master.hostname }} {{ master.cores }} && touch /etc/bibigrid/master_exec_host.added'
+    shell: '/etc/bibigrid/gridengine/add_exec.sh {{ansible_hostname }} {{ master.cores }} && touch /etc/bibigrid/master_exec_host.added'
     environment:
       SGE_ROOT: /var/lib/gridengine
     args:
@@ -217,12 +217,12 @@
   when: use_master_as_compute == 'yes'
 
 
-# add all slaves as exec host
-#- name: add all slaves as exec host
-#  shell: '/etc/bibigrid/gridengine/add_exec.sh {{ item.hostname }} {{ item.cores }}'
-#  environment:
-#    SGE_ROOT: /var/lib/gridengine
-#  with items: {{ slaves }}
+
+- name: add all slaves as exec host
+  shell: "/etc/bibigrid/gridengine/add_execcat .sh $(nslookup {{ item.ip }} | grep name | cut -f 2 -d '=' | cut -f 1 -d '.') {{ item.cores }}"
+  environment:
+    SGE_ROOT: /var/lib/gridengine
+  with_items: "{{ slaves }}"
 
 
 
