Reworking getUserData: Increase userdata log output, set hostname resolved by DNS immidiately Reoworking createCluster: Add two more log messages for non verbose mode, however this seems not enough

--- a/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/020-gridengine.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/slave/tasks/020-gridengine.yml
@@ -9,7 +9,7 @@
     - gridengine-exec # Distributed resource management - Execution Server
 
 - name: Update act_qmaster
-  shell: "echo $(nslookup {{ master.ip }} | grep name | cut -f 2 -d '=' | cut -f 1 -d '.') > /var/lib/gridengine/default/common/act_qmaster"
+  shell: "echo $(nslookup {{ master.ip }} | grep name | cut -f 2 -d '=' | cut -f 1 -d '.' | xargs) > /var/lib/gridengine/default/common/act_qmaster"
 
 - name: Update permissions
   file:
