--- a/bibigrid-core/pom.xml
+++ b/bibigrid-core/pom.xml
@@ -5,14 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>BiBiGrid</artifactId>
-        <groupId>de.unibi.cebitec.bibiserv</groupId>
-        <version>2.0</version>
+        <groupId>com.github.bibiserv</groupId>
+        <version>development-SNAPSHOT</version>
     </parent>
 
     <artifactId>BiBiGrid-Core</artifactId>
 
     <dependencies>
         <!-- General -->
+        <dependency>
+            <groupId>com.github.BiBiServ.bibiserv</groupId>
+            <artifactId>bibiservabstraction</artifactId>
+            <version>2.1.0.alpha.1</version>
+        </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
