--- a/bibigrid-core/pom.xml
+++ b/bibigrid-core/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>BiBiGrid</artifactId>
+        <artifactId>bibigrid</artifactId>
         <groupId>com.github.bibiserv</groupId>
         <version>development-SNAPSHOT</version>
     </parent>
 
-    <artifactId>BiBiGrid-Core</artifactId>
+    <artifactId>bibigrid-core</artifactId>
 
     <dependencies>
         <!-- General -->
