--- a/bibigrid-googlecloud/pom.xml
+++ b/bibigrid-googlecloud/pom.xml
@@ -3,18 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>BiBiGrid</artifactId>
+        <artifactId>bibigrid</artifactId>
         <groupId>com.github.bibiserv</groupId>
         <version>development-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>BiBiGrid-GoogleCloud</artifactId>
+    <artifactId>bibigrid-googlecloud</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.github.bibiserv</groupId>
-            <artifactId>BiBiGrid-Core</artifactId>
+            <artifactId>bibigrid-core</artifactId>
             <version>development-SNAPSHOT</version>
         </dependency>
         <dependency>
